2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefrag.am: Also download and build GCC's c++ compiler.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefrag.am: New file.
	* configury.patch: Likewise.