@@ -1,5 +1,10 @@
 2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* Makefrag.am (libstdc++)
+	(gcc/gcc.build/$(host_alias)/libstdc++-v3/build.stamp)
+	(gcc/gcc.build/$(host_alias)/libstdc++-v3/install.stamp)
+	(gcc/gcc.build/frob-Makefile-FLAGS_FOR_TARGET): New targets.
+
 	* Makefrag.am: Also download and build GCC's c++ compiler.
 
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
